upload social thumb

--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>UNCONVENTIONAL MINDS - Robotics Venture Studio</title>
-    <meta name="description" content="We bridge the gap between Lab & Market. From zero to Exit in 24 Months.">
+    <meta name="description" content="Tech With Soul">
+	
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://www.unconventionalminds.it/">
+	<meta property="og:title" content="UNCONVENTIONAL MINDS - Robotics Venture Studio">
+	<meta property="og:description" content="We build robotics ventures. From zero to Exit.">
+	<meta property="og:image" content="/assets/img/social-preview.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
