--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="css/styles.css?v=2">
+	
+	<link rel="icon" type="image/png" href=“favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/svg+xml" href="favicon/favicon.svg" />
+	<link rel="shortcut icon" href="favicon/favicon.ico" />
+	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
+	<meta name="apple-mobile-web-app-title" content="Unconventional minds" />
+	<link rel="manifest" href="favicon/site.webmanifest" />
+	
 </head>
 
 <body>
