--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 	<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 	<meta name="apple-mobile-web-app-title" content="Unconventional minds" />
 	<link rel="manifest" href="favicon/site.webmanifest" />
+	<meta name="google-site-verification" content="rvJR6HUuArqkP-b4rsBh5YmfI6KRfRfQW89EBMr1Lfo" />
 	
 </head>
 
